@@ -27,7 +27,7 @@ public class DepDescCompTest {
     public void sortAsc() {
         List<String> input = Arrays.asList("K2/SK2/SSK2", "K2", "K1/SK1",
                 "K1/SK1/SSK1", "K2/SK1", "K1", "K2/SK2");
-        List<String> expect = Arrays.asList("K1", "K1/SK1", "K1/SK1/SSK1",
+        List<String> expect = List.of("K1", "K1/SK1", "K1/SK1/SSK1",
                 "K2", "K2/SK1", "K2/SK2", "K2/SK2/SSK2");
         Collections.sort(input);
         MatcherAssert.assertThat(input, is(expect));
@@ -38,7 +38,7 @@ public class DepDescCompTest {
         List<String> input = Arrays.asList("K2/SK2/SSK2", "K2", "K1/SK1",
                 "K1/SK1/SSK1", "K1/SK1/SSK2", "K1", "K2/SK2",
                 "K2/SK1", "K1/SK2", "K2/SK1/SSK2", "K2/SK1/SSK1");
-        List<String> expect = Arrays.asList("K2", "K2/SK1", "K2/SK1/SSK1",
+        List<String> expect = List.of("K2", "K2/SK1", "K2/SK1/SSK1",
                 "K2/SK1/SSK2", "K2/SK2", "K2/SK2/SSK2",
                 "K1", "K1/SK1", "K1/SK1/SSK1", "K1/SK1/SSK2", "K1/SK2");
         Collections.sort(input, new DepDescComp());
